Creación de login.html y modificaciones
Se creo el archivo de login.html, se realizaron modificaciones en estilos.css y en registro.html. Puros cambios visuales

--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -17,20 +17,23 @@ h1 {
 input[type="text"],
 input[type="password"]{
     font-size: 20px;
-    width: 82%px;
+    width: 88%;
     padding: 10px;
     border: none;
 }
 
 .input-contenedor{
     margin-bottom: 15px;
+    
     border: 1px solid #aaa
 }
 
 .icon{
+    font-size: large;
     min-width: 50px;
     text-align: center;
     color: #999;
+    margin-left: 10px;
 }
 
 .button{
