--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -17,7 +17,7 @@ h1 {
 input[type="text"],
 input[type="password"]{
     font-size: 20px;
-    width: 82%px;
+    width: 92.5%;
     padding: 10px;
     border: none;
 }
