Modificacion de estilos

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -43,11 +43,11 @@ input[type="password"]{
     padding: 15px 20px;
     border-radius: 5px;
     cursor: pointer;
-    background: darkgrey;
+    background: #FF637D;
 }
 
 .button:hover{
-    background:cadetblue;
+    background:#ff5874;
 }
 
 p{
