--- a/css/estilo.css
+++ b/css/estilo.css
@@ -71,6 +71,7 @@ p{
         width: 500px;
         margin-top: 100px;
         border-radius: 2%;
+        margin-bottom: 100px;
     }
 } 
 /*Estilos del index*/
