--- a/prueba/estilos_tablas_edicion.css
+++ b/prueba/estilos_tablas_edicion.css
@@ -10,13 +10,15 @@ body{
     box-shadow: 0 0 20px #333;
 
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-auto-rows: 50px;
+
+    position: relative;
 }
 
 .table__title{
     grid-column-start: 1;
-    grid-column-end: 8;
+    grid-column-end: 6;
 
     background: rgb(255, 136, 0);
     color: white;
@@ -41,4 +43,34 @@ body{
 .table_item{
     padding: 10px;
     font-size:1.2em
+}
+
+/*Editar*/
+.title_edit{
+    position: absolute;
+    right: 7%;
+    color: white;
+    text-decoration: none;
+    font-size: .7em;
+}
+
+.title_edit:hover {
+    text-decoration: underline;
+}
+
+.table_input{
+    display: block;
+    padding-left: 10px;
+
+}
+
+.container_submit_actulizar{
+    background: rgba(120,65,40,1);
+    color: white;
+    border: none;
+    padding: 0;
+    width: 100px;
+    font-size: 0.9em;
+    margin: 0;
+    cursor: pointer;
 }
