Se agrega botones para compra y contacto
Se agregan los botones para cada producto mediante los cuales el cliente comprará el producto a la venta o irá a contacto para pedir un producto personalizado.

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -9,11 +9,12 @@
 }
 
 .CreativaFont1{
-    font-size: 65px;
+    font-size: 60px;
     font-family: PerfectCC;
-    color: #FF637D;
 }
 
 .CreativaFont2{
     font-family: Cocogoose;
+    font-size: 1em;
+    text-align: justify;
 }
